<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".profile_page"
    android:background="@drawable/background"
    android:layout_gravity="center">
<!--    <include layout="@layout/toolbar"/>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editing">

<!--        android:layout_marginStart="16dp"-->


        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/announcements"
            android:src="@drawable/baseline_message_24"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile"
            android:text="Profile Page"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:text="Logout"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:textStyle="normal"
            android:textSize="15dp"
            android:backgroundTint="@color/black"
            />

<!--        <EditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/Name"-->
<!--            android:padding="10dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text=""-->
<!--            android:textSize="30sp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold"-->
<!--            android:gravity="center"-->
<!--            />-->

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/baseline_person_24"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/Profile_userame"
            android:background="@drawable/custom_editing"
            android:drawableLeft="@drawable/baseline_person_24"
            android:padding="8dp"
            android:layout_marginTop="180dp"
            android:text=""
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            />

<!--        <EditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/Email"-->
<!--            android:background="@drawable/custom_editing"-->
<!--            android:drawableLeft="@drawable/baseline_email_24"-->
<!--            android:padding="8dp"-->
<!--            android:text=""-->
<!--            android:textSize="25sp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold"-->
<!--            android:gravity="center"-->
<!--            android:layout_marginTop="240dp"-->
<!--            />-->



        </RelativeLayout>
    </androidx.cardview.widget.CardView>

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/card_view4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/card_view3"-->
<!--        android:layout_margin="10dp"-->
<!--        app:cardCornerRadius="30dp"-->
<!--        app:cardElevation="20dp"-->
<!--        android:background="@drawable/custom_editing">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:padding="5dp">-->


<!--&lt;!&ndash;            <Button&ndash;&gt;-->
<!--&lt;!&ndash;                android:id="@+id/To_do_button"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                android:backgroundTint="@color/black"&ndash;&gt;-->
<!--&lt;!&ndash;                android:text="To-Do List"&ndash;&gt;-->
<!--&lt;!&ndash;                android:textAlignment="center" />&ndash;&gt;-->


<!--        </LinearLayout>-->

<!--    </androidx.cardview.widget.CardView>-->

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/card_view2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/card_view1"-->
<!--        android:layout_margin="10dp"-->
<!--        app:cardCornerRadius="30dp"-->
<!--        app:cardElevation="20dp"-->
<!--        android:background="@drawable/custom_editing">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="5dp"-->
<!--            android:gravity="center">-->




<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Rating"-->
<!--            android:id="@+id/ratings"-->
<!--            android:layout_gravity="center"-->
<!--            android:backgroundTint="@color/black"-->
<!--            android:textAlignment="center" />-->
<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Planner"-->
<!--                android:id="@+id/calendar_open"-->
<!--                android:layout_gravity="center"-->
<!--                android:backgroundTint="@color/black"-->
<!--                android:textAlignment="center" />-->

<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Camera"-->
<!--                android:id="@+id/camera_open"-->
<!--                android:layout_gravity="center"-->
<!--                android:backgroundTint="@color/black"-->
<!--                android:textAlignment="center" />-->
<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Money"-->
<!--                android:id="@+id/expense_open"-->
<!--                android:layout_gravity="center"-->
<!--                android:backgroundTint="@color/black"-->
<!--                android:textAlignment="center" />-->




<!--        </LinearLayout>-->

<!--    </androidx.cardview.widget.CardView>-->


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view1"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editing">

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center"-->
<!--            android:padding="5dp">-->

<!--&lt;!&ndash;            <Button&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:text="Friends"&ndash;&gt;-->
<!--&lt;!&ndash;                android:id="@+id/Friends"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                android:backgroundTint="@color/black"&ndash;&gt;-->
<!--&lt;!&ndash;                android:textAlignment="center"/>&ndash;&gt;-->



<!--        </LinearLayout>-->
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view3"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editing">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Description"
                android:padding="10dp"
                android:background="@drawable/custom_editing"
                android:layout_marginTop="16dp"
                android:text=""
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:hint="Description"
                />
            <TextView
                android:id="@+id/Des_Response"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit"
                android:text="Edit"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:textAlignment="center"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>


<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/card_view3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/card_view2"-->
<!--        android:layout_margin="10dp"-->
<!--        app:cardCornerRadius="30dp"-->
<!--        app:cardElevation="20dp"-->
<!--        android:background="@drawable/custom_editing">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:padding="5dp">-->

<!--            <Button-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Friends"-->
<!--                android:id="@+id/Friends"-->
<!--                android:layout_gravity="center"-->
<!--                android:backgroundTint="@color/black"-->
<!--                android:textAlignment="center"/>-->

<!--            <Button-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="ChatPage"-->
<!--                android:id="@+id/chatButton"-->
<!--                android:layout_gravity="center"-->
<!--                android:backgroundTint="@color/black"-->
<!--                android:textAlignment="center"/>-->
<!--            <Button-->
<!--                android:id="@+id/To_do_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:backgroundTint="@color/black"-->
<!--                android:text="To-Do List"-->
<!--                android:textAlignment="center" />-->

<!--        </LinearLayout>-->
<!--    </androidx.cardview.widget.CardView>-->


<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottom_navigation"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        app:menu="@menu/bottom_navigation_menu" />-->


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation1_menu" />
</RelativeLayout>