<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/ratings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/custom_editing"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="Ratings"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/custom_editing"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">


            <RatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
            android:progressBackgroundTint="@color/black"
            android:progressTint="@color/green1"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/comments"
                android:background="@drawable/custom_editing"
                android:drawablePadding="8dp"
                android:hint="Comments"
                android:padding="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:lines="4"/>

            <Button
                android:id="@+id/rateUsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:padding="10dp"
                android:text="Rate"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="normal"
                android:layout_gravity="center"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>